[package]
name = "sstable-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["env", "derive"] }
colored = { version = "2.1.0" }
sstables = { path="../sstables" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_futures"] }
common-testing = "1.1.1"
